--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,10 @@ body {
 	font-weight: 500;
 }
 
+.js-example-basic-single {
+	width: 100% !important;
+}
+
 .player-controls {
 	width: 100%;
 	height: 50px;
@@ -239,7 +243,7 @@ progress::-webkit-progress-value {
     -webkit-box-shadow: 0 4px 4px -10px rgba(0, 0, 0, 0.52);
     -moz-box-shadow: 0 4px 4px -10px rgba(0, 0, 0, 0.52);
     box-shadow: 0 8px 8px 3px rgba(0, 0, 0, 0.52);
-    z-index: 9999;
+    z-index: 99;
 }
 
 input[type=range] {
@@ -297,6 +301,21 @@ input[type=range]::-webkit-slider-thumb {
 	background: rgba(0, 0, 0, 0.4);
 }
 
+.playlist-icon-trash, .playlist-icon-pencil {
+	position: absolute;
+	z-index: 999;
+}
+
+.playlist-icon-trash {
+    bottom: -15px;
+    right: 5px;
+}
+
+.playlist-icon-pencil {
+    bottom: -15px;
+    right: 75px;
+}
+
 .player-icon {
     margin-right: 10px;
     color: #fff;
@@ -323,6 +342,34 @@ audio {
     display: inline-block;
 }
 
+.trash-player, .pencil-player {
+	padding: 20px;
+	background: #fff;
+	border-radius: 40px;
+	font-size: 1.3rem;
+	cursor: pointer;
+}
+
+.trash-player {	
+	color: #dc3545;
+	margin-left: 20px;
+}
+
+.pencil-player:hover {
+	background: #333;
+	color: #fff;
+}
+
+.trash-player:hover {
+	background: #dc3545;
+	color: #fff;
+}
+
+.pencil-player {
+	color: #333;
+	border-radius: 40px;
+}
+
 .album-image-playlists {
 	height: 300px;
     width: 300px;
@@ -346,6 +393,36 @@ audio {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-color: #333;;
+}
+
+.select2-container--bootstrap .select2-selection--single {
+    height: 38px;
+    line-height: 1.42857143;
+	padding: 8px 24px 8px 12px;
+}
+
+.custom-b4-file {
+	padding: 3px 5px;
+    width: 100%;
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+}
+
+.remove-song {
+    background: #fff;
+    color: #dc3545;
+    height: 38px;
+    font-size: 2.4rem;
+    width: 38px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.remove-song:hover {
+	opacity: 0.8;
 }
 
 /*----------  Media  ----------*/
@@ -391,6 +468,14 @@ audio {
 		width: 100%;
 		padding: 20px;
 		height: 350px;
+	}
+
+	.playlist-icon-pencil {
+		right: 285px;
+	}
+	
+	.playlist-icon-trash {
+		right: 215px;
 	}
 
 	#playerHeader > span {
@@ -457,6 +542,16 @@ audio {
 	}
 }
 
+@media only screen and (max-width: 767px) {
+	.playlist-icon-trash {
+		right: 125px;
+	}
+	
+	.playlist-icon-pencil {
+		right: 200px;
+	}
+}
+
 @media only screen and (max-width: 576px) {
 	#playerHeader > span {
 		font-size: 1rem;
@@ -476,5 +571,13 @@ audio {
 	.songs-count {
 		bottom: -20%;
 		left: 30%;
+	}
+
+	.playlist-icon-trash {
+		right: 0px;
+	}
+	
+	.playlist-icon-pencil {
+		right: 75px;
 	}
 }
